Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,13 +39,16 @@ jobs:
             inputs:
               targetType: 'inline'
               script: |
-                sudo wget https://cs.nginx.com/static/keys/nginx_signing.key && sudo apt-key add nginx_signing.key
-                [ "$(NAP)" == "true" ] && sudo wget https://cs.nginx.com/static/keys/app-protect.key && sudo apt-key add app-protect.key
                 sudo apt-get install apt-transport-https lsb-release ca-certificates
+                sudo wget https://cs.nginx.com/static/keys/nginx_signing.key && sudo apt-key add nginx_signing.key
                 printf "deb https://plus-pkgs.nginx.com/$(APT_SYSTEM) `lsb_release -cs` nginx-plus\n" | sudo tee /etc/apt/sources.list.d/nginx-plus.list
-                [ "$(NAP)" == "true" ] && printf "deb https://app-protect-sigs.nginx.com/$(APT_SYSTEM) `lsb_release -cs` nginx-plus\n" | sudo tee /etc/apt/sources.list.d/app-protect-sigs.list
-                sudo wget -P /etc/apt/apt.conf.d https://cs.nginx.com/static/files/90nginx
-                [ "$(NAP)" == "true" ] && sudo wget -P /etc/apt/apt.conf.d https://cs.nginx.com/static/files/90app-protect-sigs
+                [ -f /etc/apt/apt.conf.d/90nginx ] || sudo wget -P /etc/apt/apt.conf.d https://cs.nginx.com/static/files/90nginx
+                if [ "$(NAP)" == "true" ]
+                then
+                  sudo wget https://cs.nginx.com/static/keys/app-protect.key && sudo apt-key add app-protect.key
+                  printf "deb https://app-protect-sigs.nginx.com/$(APT_SYSTEM) `lsb_release -cs` nginx-plus\n" | sudo tee /etc/apt/sources.list.d/app-protect-sigs.list
+                  [ -f /etc/apt/apt.conf.d/90app-protect-sigs ] || sudo wget -P /etc/apt/apt.conf.d https://cs.nginx.com/static/files/90app-protect-sigs
+                fi
           - task: Bash@3
             displayName: Install NGINX Plus
             inputs:
