--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,6 +80,8 @@ jobs:
               targetType: inline
               script: |
                 [ "$(CTRL_REG)" != "true" ] && echo "Skipped" && exit 0
+                curl -k -sS -L $(CTRL_URI):8443/1.4/install/controller/ > install.sh
+                API_KEY=$(CTRL_API_KEY) sh ./install.sh -l $(CTRL_LOCATION)
         on:
           failure:
             steps:
