--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,6 +72,7 @@ jobs:
             inputs:
               targetType: 'inline'
               script: |
+                set -x
                 export DEBIAN_FRONTEND=noninteractive
                 sudo -E apt-get update
                 dpkg -l | grep nginx-plus
@@ -80,7 +81,6 @@ jobs:
                   sudo -E apt-get -y install nginx-plus
                   RESTART_NGINX=true
                 fi
-
                 dpkg -l | grep app-protect
                 if [ $? != 0 ]
                 then
@@ -90,7 +90,6 @@ jobs:
                     RESTART_NGINX=true
                   fi
                 fi
-
                 [ "${RESTART_NGINX}" == "true" ] && sudo systemctl restart nginx
           
           - task: Bash@3
