--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   # Install NGINX App Protect (true or false)?
   NAP: true
 
-  # NGINX Plus repo Cert and Key
+  # NGINX Plus repo Cert and Key (base64 encoded)
   NGINX_REPO_KEY: $(nginxRepoKey)
   NGINX_REPO_CRT: $(nginxRepoCrt)
 
@@ -17,19 +17,19 @@ variables:
   APT_SYSTEM: ubuntu
 
   # Register with NGINX Controller (true or false)?
-  CTRL_REG: $(controller_register)
+  CTRL_REG: $(controllerRegister)
 
   # API endpoint of controller eg https://mycontroller.cloud.net
-  CTRL_URI: $(controller_uri)
+  CTRL_URI: $(controllerUri)
   # Verify Controller certificate (true or false)?
-  CTRL_VERIFY: $(controller_verify)
+  CTRL_VERIFY: $(controllerVerify)
   # API Key needed to register new NGINX agents
-  CTRL_API_KEY: $(controller_api_key)
+  CTRL_API_KEY: $(controllerApiKey)
 
   # The location to register the NGINX agent.
-  AGENT_LOC: $(agent_location)
+  AGENT_LOC: $(agentLocation)
   # Enable Agent Beta features (true or false)?
-  AGENT_BETA: $(agent_enable_beta)
+  AGENT_BETA: $(agentBeta)
 
 trigger:
 - none
